hphp/hack/test/typecheck/global_const5.php.exp
File "global_const5.php", line 3, characters 11-13:
Illegal constant value (Naming[2023])
