hphp/hack/test/typecheck/global_const5.php
<?hh // partial

const X = Map{};
